PaginationCriteria: Fix FindBugs warning
FindBugs report:

Method invokes inefficient Number constructor; use static valueOf instead

Signed-off-by: Stefan Weil <sw@weilnetz.de>